fix contrast errors

--- a/style.css
+++ b/style.css
@@ -756,6 +756,14 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.black {
+    color: #1f1f1f!important;
+}
+
+.orange {
+    color: #FAE2D6!important;
+}
+
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -809,12 +817,12 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #1f1f1f!important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #1f1f1f!important;
 }
 
 .ltc-white {
